--- a/COENCars/COENCars.vcxproj.filters
+++ b/COENCars/COENCars.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestCar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
