--- a/COENCars/COENCars.vcxproj
+++ b/COENCars/COENCars.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="COENCars.cpp" />
     <ClCompile Include="Company.cpp" />
+    <ClCompile Include="Customer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="Company.h" />
+    <ClInclude Include="Customer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
