--- a/COENCars/COENCars.vcxproj
+++ b/COENCars/COENCars.vcxproj
@@ -128,7 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
-    <ClCompile Include="COENCars.cpp" />
+    <ClCompile Include="TestCustomer.cpp" />
     <ClCompile Include="Company.cpp" />
     <ClCompile Include="Customer.cpp" />
   </ItemGroup>
