--- a/COENCars/COENCars.vcxproj.filters
+++ b/COENCars/COENCars.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="COENCars.cpp">
+    <ClCompile Include="TestCustomer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Car.cpp">
