Test Drive for Company and Class Definition.

--- a/COENCars/COENCars.vcxproj.filters
+++ b/COENCars/COENCars.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="COENCars.cpp">
+    <ClCompile Include="testCompany.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Car.cpp">
