--- a/COENCars/COENCars.vcxproj
+++ b/COENCars/COENCars.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="COENCars.cpp" />
     <ClCompile Include="Customer.cpp" />
+    <ClCompile Include="testCompany.cpp" />
     <ClCompile Include="Company.cpp" />
   </ItemGroup>
   <ItemGroup>
