add date to test customer

--- a/COENCars/COENCars.vcxproj
+++ b/COENCars/COENCars.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="COENCars.cpp" />
     <ClCompile Include="Company.cpp" />
     <ClCompile Include="Customer.cpp" />
@@ -135,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="Customer.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Company.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
